--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Media/Delete.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Media/Delete.cshtml
@@ -5,14 +5,15 @@
     
 }
 
-<div class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="card border-1 rounded-lg p-0">
-            <div class="card-header">
-                <h3 class="text-center font-weight-light my-4">Delete Media</h3>
-            </div>
-            <div class="card-body">
+<div class="container">
+    <div class="card border-1 rounded-lg p-0">
+        <div class="card-header">
+            <h3 class="text-center font-weight-light my-4">Delete Media</h3>
+        </div>
+        <div class="card-body">
 
+            <div class="d-flex justify-content-center">
+                
                 <dl class="row">
                     <dt class="col-sm-3">File Name</dt>
                     <dd class="col-sm-9">@Model.Model.FileName</dd>
@@ -33,32 +34,39 @@
                     <dt class="col-sm-3">Date Updated</dt>
                     <dd class="col-sm-9">@Model.Model.UpdatedAt.ToShortDateString() </dd>
                 </dl>
+            </div>
 
-                <!-- Modal -->
-                <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Delete Confirmation</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                Are you sure you want to delete this?
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                <button type="submit" form="deleteForm" class="btn btn-danger">Delete</button>
-                            </div>
+            <!-- Modal -->
+            <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Delete Confirmation</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete this?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="submit" form="deleteForm" class="btn btn-danger">Delete</button>
                         </div>
                     </div>
                 </div>
-
-                <form id="deleteForm" method="post">
-                    <input type="hidden" asp-for="Model.ID" />
-                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmationModal">Delete</button>
-                    <a href="/Manage/Media" class="btn btn-primary">Back to List</a>
-                </form>
             </div>
+
+            <form id="deleteForm" method="post">
+                <input type="hidden" asp-for="Model.ID" />
+
+                <div class="row justify-content-center">
+                    <div class="col-md-4 mb-3">
+                        <button type="button"  data-bs-toggle="modal" data-bs-target="#confirmationModal" class="btn btn-danger w-100">Delete</button>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <a href="/Manage/Media" class="btn btn-primary w-100">Back to List</a>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
