--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Media/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Media/Edit.cshtml
@@ -4,36 +4,38 @@
 @{
     ViewData["Title"] = "Edit";
 }
-<div class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="card border-1 rounded-lg p-0">
-            <div class="card-header">
-                <h3 class="text-center font-weight-light my-4">Edit Media</h3>
-            </div>
-            <div class="card-body">
-                <form method="post" enctype="multipart/form-data">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="row justify-content-between">
-                        <div class="col-6">
-                            <input asp-for="UploadedFile" type="file" class="form-control" />
-                        </div>
-                        <div class="col-4">
-                            <input asp-for="Model.FileName" class="form-control" placeholder="File Name" />
-                            <span asp-validation-for="Model.FileName" class="text-danger"></span>
-                        </div>
-                        <div class="col-2">
-                            <input asp-for="Model.IsPublic" class="form-check-input" />
-                            <label asp-for="Model.IsPublic" class="form-check-label"></label>
-                            @* <span asp-validation-for="Model.IsPublic" class="text-danger"></span> *@
-                        </div>
-                       
+<div class="container">
+    <div class="card border-1 rounded-lg p-0">
+        <div class="card-header">
+            <h3 class="text-center font-weight-light my-4">Edit Media</h3>
+        </div>
+        <div class="card-body">
+            <form method="post" enctype="multipart/form-data">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="row justify-content-center">
+                    <div class="col-md-4 mb-3">
+                        <input asp-for="UploadedFile" type="file" class="form-control" />
                     </div>
-                    <div class="form-group" style="margin-top: 10px;">
-                        <input type="submit" value="Edit" class="btn btn-primary" />
-                        <a asp-page="./Index" class="btn btn-secondary">Cancel</a>
+                    <div class="col-md-4 mb-3">
+                        <input asp-for="Model.FileName" class="form-control" placeholder="File Name" />
+                        <span asp-validation-for="Model.FileName" class="text-danger"></span>
                     </div>
-                </form>
-            </div>
+                    <div class="col-md-2 mb-3">
+                        <input asp-for="Model.IsPublic" class="form-check-input" />
+                        <label asp-for="Model.IsPublic" class="form-check-label"></label>
+                        @* <span asp-validation-for="Model.IsPublic" class="text-danger"></span> *@
+                    </div>
+                </div>
+
+                <div class="row justify-content-center">
+                    <div class="col-md-4 mb-3">
+                        <input type="submit" value="Edit" class="btn btn-primary w-100" />
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <a asp-page="./Index" class="btn btn-secondary w-100">Cancel</a>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
