--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Create.cshtml
@@ -16,16 +16,24 @@
                         <label asp-for="Language.Code" class="control-label"></label>
                         <span asp-validation-for="Language.Code" class="text-danger"></span>
                     </div>
-                    <div class="form-floating mb-3">
+                    <div class="form-floating mb-4">
                         <input asp-for="Language.Name" class="form-control" />
                         <label asp-for="Language.Name" class="control-label"></label>
                         <span asp-validation-for="Language.Name" class="text-danger"></span>
                     </div>
-                    @*<label asp-for="Language.Translations" class="control-label"></label>
-                    <div class="form-floating mb-3">
-                        <textarea asp-for="JsonData" class="form-control, text-danger " placeholder='{"KeyAccept" :  , "KeyCreate" : }' style="height: 15rem; width: 100%;"></textarea>
-                        <span asp-validation-for="JsonData" class="text-danger"></span>
-                    </div>*@
+
+                    <div class="mb-5">
+                        <label class="control-label mb-2">Translations</label>
+                        <div class="list-group">
+                            @foreach (var key in Model.KeyTranslationsValueString.Keys)
+                            {
+                                <a href="/Manage/Translations/Edit?keyCode=@key" class="list-group-item list-group-item-action" data-bs-toggle="tooltip" data-bs-placement="bottom" title="@Model.KeyTranslationsValueString[key]">
+                                    @key
+                                </a>
+                            }
+                        </div>
+                    </div>
+
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
                             <input type="submit" value="Create" class="btn btn-primary btn-block"/>
