--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Edit.cshtml
@@ -12,15 +12,21 @@
                 <form method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Translation.Key" class="form-control" />
-                        <label asp-for="Translation.Key" class="control-label"></label>
-                        <span asp-validation-for="Translation.Key" class="text-danger"></span>
+                        <input asp-for="Key" class="form-control" />
+                        <label asp-for="Key" class="control-label"></label>
+                        <span asp-validation-for="Key" class="text-danger"></span>
                     </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Translation.Translation" class="form-control" />
-                        <label asp-for="Translation.Translation" class="control-label"></label>
-                        <span asp-validation-for="Translation.Translation" class="text-danger"></span>
-                    </div>
+
+                    @for(int i = 0; i < Model.Translations.Count(); i++)
+                    {
+                        <div class="form-floating mb-3">
+                            <input asp-for="@Model.Translations[i].ID" class="form-control" hidden />
+                            <input asp-for="@Model.Translations[i].LanguageId" class="form-control" hidden/>
+                            <input asp-for="@Model.Translations[i].Translation" class="form-control" />
+                            <label asp-for="@Model.Translations[i].Translation" class="control-label">@Model.Translations[i].LanguageCode</label>
+                            <span asp-validation-for="@Model.Translations[i].Translation" class="text-danger"></span>
+                        </div>
+                    }
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
                             <input type="submit" value="Save" class="btn btn-primary" />
