--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Details.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Details.cshtml
@@ -12,19 +12,14 @@
                 <form>
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>                   
                     <div class="form-floating mb-3">
-                        <input asp-for="Translation.ID" class="form-control" readonly />
-                        <label asp-for="Translation.ID" class="control-label"></label>
-                        <span asp-validation-for="Translation.ID" class="text-danger"></span>
+                        <input asp-for="Key" class="form-control" readonly />
+                        <label asp-for="Key" class="control-label"></label>
+                        <span asp-validation-for="Key" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Translation.Key" class="form-control" readonly />
-                        <label asp-for="Translation.Key" class="control-label"></label>
-                        <span asp-validation-for="Translation.Key" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Translation.LanguageId" class="form-control" readonly />
-                        <label asp-for="Translation.LanguageId" class="control-label"></label>
-                        <span asp-validation-for="Translation.LanguageId" class="text-danger"></span>
+                        <input asp-for="Translation.LanguageCode" class="form-control" readonly />
+                        <label asp-for="Translation.LanguageCode" class="control-label">Language</label>
+                        <span asp-validation-for="Translation.LanguageCode" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
                         <input asp-for="Translation.Translation" class="form-control" readonly />
