--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Delete.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<div class="container-fluid">
+<div class="container-fluid mt-3">
     <div class="row justify-content-center">
         <div class="card border-1 rounded-lg p-0">
             <div class="card-header text-center">
@@ -15,9 +15,14 @@
                 <form>
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Translation.Key" class="form-control" readonly />
-                        <label asp-for="Translation.Key" class="control-label"></label>
-                        <span asp-validation-for="Translation.Key" class="text-danger"></span>
+                        <input asp-for="Key" class="form-control" readonly />
+                        <label asp-for="Key" class="control-label"></label>
+                        <span asp-validation-for="Key" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input asp-for="Translation.LanguageCode" class="form-control" readonly />
+                        <label asp-for="Translation.LanguageCode" class="control-label">Language</label>
+                        <span asp-validation-for="Translation.LanguageCode" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
                         <input asp-for="Translation.Translation" class="form-control" readonly />
@@ -25,11 +30,30 @@
                         <span asp-validation-for="Translation.Translation" class="text-danger"></span>
                     </div>
                 </form>
-                <form method="post">
-                    <input type="hidden" asp-for="Translation.LanguageId" />
+
+                <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Delete Confirmation</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to delete this?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="submit" form="deleteForm" class="btn btn-danger">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <form id="deleteForm" method="post">
+                    <input type="hidden" asp-for="Translation.LanguageId"/>
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
-                            <input type="submit" value="Delete" class="btn btn-danger" />
+                            <input type="button" value="Delete" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmationModal" />
                         </div>
                     </div>
                 </form>
