--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Delete.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Delete.cshtml
@@ -23,8 +23,6 @@
                     @for (int i = 0; i < Model.Translations.Count(); i++)
                     {
                         <div class="form-floating mb-3">
-                            <input asp-for="@Model.Translations[i].ID" class="form-control" hidden />
-                            <input asp-for="@Model.Translations[i].LanguageId" class="form-control" hidden />
                             <input asp-for="@Model.Translations[i].Translation" class="form-control" readonly/>
                             <label asp-for="@Model.Translations[i].Translation" class="control-label">@Model.Translations[i].LanguageCode</label>
                             <span asp-validation-for="@Model.Translations[i].Translation" class="text-danger"></span>
@@ -51,7 +49,16 @@
                 </div>
 
                 <form id="deleteForm" method="post">
-                    @*<input type="hidden" asp-for="Translation.LanguageId"/>*@
+                    <input type="hidden" asp-for="Key"/>
+                    @for (int i = 0; i < Model.Translations.Count(); i++)
+                    {
+                        <div class="form-floating mb-3">
+                            <input asp-for="@Model.Translations[i].ID" class="form-control" hidden />
+                            <input asp-for="@Model.Translations[i].Translation" class="form-control" hidden />
+                            <label asp-for="@Model.Translations[i].Translation" class="control-label" hidden>@Model.Translations[i].LanguageCode</label>
+                            <span asp-validation-for="@Model.Translations[i].Translation" class="text-danger" hidden></span>
+                        </div>
+                    }
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
                             <input type="button" value="Delete" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmationModal" />
