--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Delete.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Delete.cshtml
@@ -25,11 +25,30 @@
                         <span asp-validation-for="Language.Name" class="text-danger"></span>
                     </div>
                 </form>
-                <form method="post">
+
+                <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Delete Confirmation</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to delete this?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="submit" form="deleteForm" class="btn btn-danger">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <form id="deleteForm" method="post">
                     <input type="hidden" asp-for="Language.ID" />
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
-                            <input type="submit" value="Delete" class="btn btn-danger" />
+                            <input type="button" value="Delete" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmationModal" />
                         </div>
                     </div>
                 </form>
