--- a/Core/OpenCRM.Core.Web/Components/Table/Table.razor
+++ b/Core/OpenCRM.Core.Web/Components/Table/Table.razor
@@ -35,20 +35,21 @@
                             {
                                 <td>
                                     <ButtonLink Label="@item.Label" Url="@(TableData.Page + "/" + item.Label + "?id=" + row.ID)" Icon="@item.IconName" />
-                                    </td>
-                                }   
-                                else if(item.IsImage) {
-                                    <td>
-                                        @if (item.Url == null || item.ImageUrl == null)
-                                        {
-                                            @item.Label
-                                        }
-                                        else
-                                        {
-                                        <a href="@item.ImageUrl">
-                                            <img src="@item.ImageUrl" style="width:50px;" />
-                                         </a>
-                                        }
+                                 </td>
+                            }   
+                            else if(item.IsImage) 
+                            {
+                                <td>
+                                    @if (item.Url == null || !item.PaintImage)
+                                    {
+                                        @item.Label
+                                    }
+                                    else
+                                    {
+                                        <a href="@item.Url">
+                                            <img src="@item.Url" style="width:50px;" />
+                                        </a>
+                                    }
                                 </td>
                             }
                             else
