--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -2,7 +2,7 @@
     <div class="container-fluid d-flex align-items-center">
         <div class="d-flex align-items-center text-center">
             <a class="navbar-brand" href="/Index">
-                <img src="_content/OpenCRM.Core.Web/images/logo.png" alt="OpenDHS" width="64" height="32">
+                <img src="/_content/OpenCRM.Core.Web/images/logo.png" alt="OpenDHS" width="64" height="32">
             </a>
             <div class="navbar-collapse collapse d-sm-inline-flex me-2">
                 <ul class="navbar-nav flex-grow-1">
