--- a/Core/OpenCRM.Core.Web/Pages/Shared/_CoreLayout.cshtml
+++ b/Core/OpenCRM.Core.Web/Pages/Shared/_CoreLayout.cshtml
@@ -24,7 +24,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - OpenCRM.Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2024 - OpenCRM.Web - v0.0.0-2 <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
