--- a/OpenCRM.Web/Pages/Index.cshtml
+++ b/OpenCRM.Web/Pages/Index.cshtml
@@ -10,33 +10,12 @@
 <div class="text-center">
     <h6 class="display-4">KEY_MANAGE_WELCOME: @Model.Translations?["KEY_MANAGE_WELCOME"]</h6>
 
-    @*<p>@CardBlockService.GetBlockByCode("KEY_BLOCKCARD_DEMO").Result?.Data?.Title</p>*@
-  
-    @*<article id="card-block" class="block container"></article>*@
-
-  @*  @if (Model.Block != null && Model.Block.Title != "")
+    @if(Model.Block != null)
     {
-        <article class="block container">
-            <div class="block-info">
-                <div class="block-text-info">
-                    <h1 class="block-title">@Model.Block.Title</h1>
-
-                    @if (!string.IsNullOrEmpty(Model.Block.SubTitle))
-                    {
-                        <h2 class="block-subtitle">@Model.Block.SubTitle</h2>
-                    }
-
-                    @if (!string.IsNullOrEmpty(Model.Block.Description))
-                    {
-                        <p class="block-description">@Model.Block.Description</p>
-                    }
-                </div>
-
-                @if (!string.IsNullOrEmpty(Model.Block.ImageUrl))
-                {
-                    <img class="block-image" src="@Model.Block.ImageUrl" />
-                }
-            </div>
+        <article>
+            <p>@Model.Block.Code</p>
+            <p>@Model.Block.Description</p>
         </article>
-    }*@
+    }
+    
 </div>
